--- a/package.json
+++ b/package.json
@@ -15,19 +15,23 @@
     "react-native": "0.64.3",
     "react-native-web": "0.17.1",
     "expo-font": "~10.0.5",
+    "expo-speech": "~10.1.1",
     "expo-app-loading": "~1.3.0",
     "@expo/vector-icons": "^12.0.0",
     "react-native-paper": "^4.7.2",
     "react-native-screens": "~3.10.1",
+    "@react-navigation/stack": "^5.14.4",
     "react-native-reanimated": "~2.3.1",
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
     "react-native-vector-icons": "*",
+    "react-native-dropdown-picker": "^4.0.4",
     "react-native-gesture-handler": "~2.1.0",
+    "@react-navigation/bottom-tabs": "^5.11.9",
     "react-native-safe-area-context": "3.3.2",
     "react-native-responsive-fontsize": "^0.5.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/material-bottom-tabs": "^6.2.1"
+    "@react-navigation/material-bottom-tabs": "^5.3.15"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
