--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-web": "0.17.1",
+    "moment": "2.18.1*",
     "firebase": "^8.2.10",
     "expo-font": "~10.0.3",
     "expo-speech": "~10.0.3",
